# CodeReviewerBot

./: .gitignore  README.md  STRUCTURE.md  build_binary.py  build_linux.py  config.yaml.example  pyproject.toml  需求文档.md
.github/workflows/: ci.yml
c_src/: CMakeLists.txt  static_analyzer.cpp
docs/: README.md  structure.md  需求文档.md  项目进度.md
docs/analyzers/c_cpp/: structure.md
docs/analyzers/generic/: structure.md
docs/analyzers/go/: structure.md
docs/analyzers/python/: structure.md
docs/analyzers/rust/: structure.md
docs/cli/: structure.md
docs/config/: structure.md
docs/llm/: structure.md
docs/report/: structure.md
scripts/: build.py  docs_gen_agent.py  test_docs_stability.py
src/crb/: __init__.py  __main__.py
src/crb/agents/: __init__.py  commit_organizer_agent.py  doc_consistency_agent.py  fix_agent.py  review_agent.py  semantic_agent.py  structure_agent.py
src/crb/analyzers/: call_chain.py  detector.py  generic.py  secret_detector.py
src/crb/analyzers/c_cpp/: reporter.py
src/crb/analyzers/generic/: structure_analyzer.py
src/crb/analyzers/go/: reporter.py
src/crb/analyzers/python/: auth_detector.py  bloat_detector.py  bug_detector.py  comment_detector.py  complexity.py  dead_code_detector.py  dependency_detector.py  design_detector.py  edge_case_detector.py  layered_test_detector.py  multi_agent.py  orphan_detector.py  reporter.py  (+4 more)
src/crb/cli/: main.py
src/crb/config/: settings.py
src/crb/llm/: client.py
src/crb/report/: models.py  structure_builder.py
src/crb/templates/: ci_templates.py
tests/: test_python_analyzer.py
(+1 files in other folders)
