[project]
name = "codereviewerbot"
version = "0.1.6"
description = "AI-powered code review bot for Python, C/C++, Go, Rust"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
crb = "crb.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crb = ["c_src/build/static_analyzer"]
